# cognitive-basin-platform

./: # Natural Math v6 — Integer Turing.txt  .gitignore  Being_Envelope_Technical_White_Paper_v0.1.docx  Being_Envelope_Technical_White_Paper_v0.1.md  CNTM_Persistent_Becoming_Thesis_v1.0.docx  CNTM_Persistent_Becoming_Thesis_v1.0.md  Latent_Role_Intelligence_Thesis_v1.0.docx  Latent_Role_Intelligence_Thesis_v1.0.md  Qwen_Cognitive_Basin_Handoff.md  STAGE_1_1_REVIEW_MANIFEST.sha256  _check_json.py  _fix_batch1.py  _inspect_fixtures.py  _mkdirs.py  _smoke_params.py  _stage1_runner.py  _test_oracles.py  pyproject.toml
01_INVENTORY/: autoclaw_conflict_report.md
06_REPORTS/: STAGE_1_1_COMPLETION.md  STAGE_1_COMPLETION.md  baby_ai_layered_build_map.md  cluster_runner_spec_gap_audit.md  integer_runner_spec_gap_audit.md  stage_2_baseline_freeze_record.md  stage_2_completion.md  v3_6_vs_v5_rule_crosswalk.csv  v5_implementation_donor_matrix.csv
08_BUILD_LOGS/: decisions.md  deviations.md
action_permit/: __init__.py  acceptance.py
basinlab/: __init__.py  acceptance.py
cloudflare_readiness/: __init__.py
cognitive_basin/: __init__.py  acceptance.py
connector_lab/: __init__.py  acceptance.py
consciousness_lab/: __init__.py  acceptance.py  demo.py
docs/: CODEX_HANDOFF_STATE.md  CURRENT_STATE.md  DECISIONS.md  FAILURES.md  NEXT_ACTION.md  basinlab_clean_room_note.md  structure.md
ephux_local/: __init__.py  acceptance.py  server.py
evaluation_lab/: __init__.py  acceptance.py
manifests/: artifact-manifest.json  github-inventory-2026-06-17.json
memory_governance/: __init__.py  acceptance.py
natural_math_lab/: __init__.py  acceptance.py
predictive_cognition/: __init__.py  acceptance.py  demo.py
provider_lab/: __init__.py  acceptance.py
sandbox_lab/: __init__.py  acceptance.py
tests/: test_action_permit_acceptance.py  test_agent_work_import.py  test_basinlab_acceptance.py  test_basinlab_compression.py  test_basinlab_governance_memory.py  test_basinlab_hardening.py  test_connectors.py  (+25 more)
(+789 files in other folders)
