[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-basin-platform"
version = "0.2.0"
description = "Executable Cognitive Basin and BasinLab platform"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = [
    "basinlab*",
    "cognitive_basin*",
    "ephux_local*",
    "evaluation_lab*",
    "memory_governance*",
    "natural_math_lab*",
    "packages*",
    "provider_lab*",
    "python*",
    "sandbox_lab*",
]
