[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-basin-platform"
version = "0.2.0"
description = "Executable Cognitive Basin and BasinLab platform"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = [
    "action_permit*",
    "basinlab*",
    "cloudflare_readiness*",
    "consciousness_lab*",
    "cognitive_basin*",
    "connector_lab*",
    "ephux_local*",
    "evaluation_lab*",
    "memory_governance*",
    "natural_math_lab*",
    "packages*",
    "predictive_cognition*",
    "provider_lab*",
    "python*",
    "sandbox_lab*",
]

[tool.pytest.ini_options]
norecursedirs = [
    "imports/aia-sovereign-activation-device",
    "imports/cntm-natural-math-canonical-library",
    "evidence/motorola-activation",
]
